<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileManagement">

    <TextView
        android:id="@+id/textUn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="90dp"
        android:text="@string/un"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="74dp"
        />

    <EditText
        android:id="@+id/editTxtUn2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="26dp" />

    <TextView
        android:id="@+id/textDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="158dp"
        android:text="@string/dob"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="74dp" />

    <EditText
        android:id="@+id/editTxtDob"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="26dp" />

    <TextView
        android:id="@+id/textPwd2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="213dp"
        android:text="@string/pwd"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="74dp" />

    <EditText
        android:id="@+id/editTxtPwd2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="26dp" />

    <TextView
        android:id="@+id/textGender"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="291dp"
        android:text="@string/gen"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="74dp" />

    <RadioGroup
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="285dp">

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </LinearLayout>
    </RadioGroup>

    <Button
        android:layout_width="179dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="391dp"
        android:text="@string/update" />
</RelativeLayout>