<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">


    <TextView
        android:id="@+id/txtUn"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:text="@string/un" />

    <EditText
        android:id="@+id/editTxtUn"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="43dp" />

    <TextView
        android:id="@+id/txtPwd"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="166dp"
        android:text="@string/pwd" />

    <EditText
        android:id="@+id/editTxtPwd"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="43dp"

        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="168dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="345dp"
        android:text="@string/login" />


    <Button
        android:id="@+id/btnReg"
        android:layout_width="168dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="224dp"
        android:layout_marginBottom="345dp"
        android:text="@string/reg" />
</RelativeLayout>